[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
ctrlc = "3.2"


# OpenTelemetry dependencies
actix-web-opentelemetry = "0.14"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.19", features = ["rt-tokio"] }
# OTLP exporter with tonic (gRPC) transport
opentelemetry-otlp = { version = "0.12", features = ["metrics", "trace", "tonic"] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
